--- a/roles/hcl/connections-wizards/tasks/setup_connections_docs.yml
+++ b/roles/hcl/connections-wizards/tasks/setup_connections_docs.yml
@@ -5,24 +5,24 @@
   when:
     - __cnx_docs_force_repopulation |bool
 
-- name:                 "Verify if migrations are already done"
+- name:                 "Verify if database creation are already done"
   stat:
     path:                "{{ __docs_success_file }}"
-  register:              docs_migrations_already_done
+  register:              docs_creation_already_done
 
 - name:                  Clean up installation folder(s)
   file:
     path:                "{{ __docs_extraction_folder }}"
     state:               absent
   when:
-    - not docs_migrations_already_done.stat.exists
+    - not docs_creation_already_done.stat.exists
 
 - name:                  Create installation folder
   file:
     path:                "{{ __docs_extraction_folder }}"
     state:               directory
   when:
-    - not docs_migrations_already_done.stat.exists
+    - not docs_creation_already_done.stat.exists
 
 - name:                  Download and unzip installation {{ __docs_package_name }} to the {{ __docs_extraction_folder }}
   unarchive:
@@ -30,12 +30,12 @@
     dest:                "{{ __docs_extraction_folder }}"
     remote_src:          yes
   when:
-    - not docs_migrations_already_done.stat.exists
+    - not docs_creation_already_done.stat.exists
 
 - name:                  Disable fingerprinting
   command:               authconfig --disablefingerprint --update
   when:
-    - not docs_migrations_already_done.stat.exists
+    - not docs_creation_already_done.stat.exists
 
 - name:                  Cleanup Docs database
   shell:                 "chdir={{ __docs_installation_folder }}/db2 sh {{ item }}"
@@ -55,10 +55,10 @@
     - __cnx_docs_force_repopulation |bool
   ignore_errors:         yes
 
-- name:                 "Verify if should proceed with migrations if cleanup was done"
+- name:                 "Verify if should proceed with database creation if cleanup was done"
   stat:
     path:                "{{ __docs_success_file }}"
-  register:              docs_migrations_already_done
+  register:              docs_creation_already_done
 
 - name:                  Create Docs database and update schema
   shell:                 "chdir={{ __docs_installation_folder }}/db2 sh {{ item }}"
@@ -76,7 +76,7 @@
    - "createDb.sh"
    - "updateDBSchema.sh"
   when:
-    - not docs_migrations_already_done.stat.exists
+    - not docs_creation_already_done.stat.exists
 
 - name:                  Run appGrants.sql
   shell:                 "{{ __db2_migration_cmd }} {{ __docs_installation_folder }}/db2/{{ item }}"
@@ -95,7 +95,7 @@
   with_items:
    - "appGrants.sql"
   when:
-    - not docs_migrations_already_done.stat.exists
+    - not docs_creation_already_done.stat.exists
 
 - name:                  "Create {{ __docs_success_file }} file"
   file:
