--- a/roles/hcl/connections-wizards/tasks/setup_connections_wizards_mssql.yml
+++ b/roles/hcl/connections-wizards/tasks/setup_connections_wizards_mssql.yml
@@ -1,21 +1,21 @@
-- name:                  "Verify if migrations are already done"
+- name:                  "Verify if database creation are already done"
   stat:
     path:                "{{ __sql_success_file }}"
-  register:              migrations_already_done
+  register:              creation_already_done
 
 - name:                  Clean up installation folder(s)
   file:
     path:                "{{ __db_extraction_folder }}"
     state:               absent
   when:
-    - (not migrations_already_done.stat.exists) or (__cnx_force_repopulation |bool )
+    - (not creation_already_done.stat.exists) or (__cnx_force_repopulation |bool )
 
 - name:                  Create installation folder
   file:
     path:                "{{ __db_extraction_folder }}"
     state:               directory
   when:
-    - (not migrations_already_done.stat.exists) or (__cnx_force_repopulation |bool )
+    - (not creation_already_done.stat.exists) or (__cnx_force_repopulation |bool )
 
 
 - name:                  Download and unzip installation "{{ __download_location}}/{{ __package_name }}" to the {{ __db_extraction_folder }}
@@ -24,13 +24,13 @@
     dest:                "{{ __db_extraction_folder }}"
     remote_src:          yes
   when:
-    - (not migrations_already_done.stat.exists) or (__cnx_force_repopulation |bool) or (__db_enable_upgrades |bool)
+    - (not creation_already_done.stat.exists) or (__cnx_force_repopulation |bool) or (__db_enable_upgrades |bool)
   retries:               3
 
 - name:                  Disable fingerprinting
   command:               authconfig --disablefingerprint --update
   when:
-    - not migrations_already_done.stat.exists
+    - not creation_already_done.stat.exists
 
 - name:                  Stop CNX cluster for database cleanup
   include_role:
@@ -43,8 +43,8 @@
 
 - name:                  Cleanup Databases
   shell:                 "{{ __sql_migration_cmd }} {{ __installation_folder }}/{{ item }} {{ __sql_migration_cmd_args }}"
-  register:              all_migrations_result
-  failed_when:           ( all_migrations_result.rc not in [0] )
+  register:              all_creation_result
+  failed_when:           ( all_creation_result.rc not in [0] )
   environment:
     PATH:                "PATH=/usr/local/bin:/usr/bin:/usr/local/sbin:/usr/sbin:/opt/mssql/bin:/opt/mssql-tools/bin:/home/vagrant/.local/bin:/home/vagrant/bin:/opt/mssql/bin:/opt/mssql-tools/bin"
   with_items:
@@ -69,8 +69,8 @@
 
 - name:                  Cleanup IC360 database
   shell:                 "{{ __sql_migration_cmd }} {{ __installation_folder }}/{{ item }} {{ __sql_migration_cmd_args }}"
-  register:              all_migrations_result
-  failed_when:           ( all_migrations_result.rc not in [0] )
+  register:              all_creation_result
+  failed_when:           ( all_creation_result.rc not in [0] )
   environment:
     PATH:                "PATH=/usr/local/bin:/usr/bin:/usr/local/sbin:/usr/sbin:/opt/mssql/bin:/opt/mssql-tools/bin:/home/vagrant/.local/bin:/home/vagrant/bin:/opt/mssql/bin:/opt/mssql-tools/bin"
   with_items:
@@ -82,8 +82,8 @@
 
 - name:                  Clenaup ICEC database only
   shell:                 "{{ __sql_migration_cmd }} {{ __installation_folder }}/{{ item }} {{ __sql_migration_cmd_args }}"
-  register:              all_migrations_result
-  failed_when:           ( all_migrations_result.rc not in [0] )
+  register:              all_creation_result
+  failed_when:           ( all_creation_result.rc not in [0] )
   environment:
     PATH:                "PATH=/usr/local/bin:/usr/bin:/usr/local/sbin:/usr/sbin:/opt/mssql/bin:/opt/mssql-tools/bin:/home/vagrant/.local/bin:/home/vagrant/bin:/opt/mssql/bin:/opt/mssql-tools/bin"
   with_items:
@@ -103,15 +103,15 @@
   when:
     - __cnx_force_repopulation |bool
 
-- name:                  "Verify if should proceed with migrations if cleanup was done"
+- name:                  "Verify if should proceed with database creation if cleanup was done"
   stat:
     path:                "{{ __sql_success_file }}"
-  register:              migrations_already_done
+  register:              creation_already_done
 
-- name:                  Run migrations for everything but ICEC
+- name:                  Run database creation for everything but ICEC
   shell:                 "{{ __sql_migration_cmd }} {{ __installation_folder }}/{{ item }} {{ __sql_migration_cmd_args }}"
-  register:              all_migrations_result
-  failed_when:           ( all_migrations_result.rc not in [0] )
+  register:              all_creation_result
+  failed_when:           ( all_creation_result.rc not in [0] )
   environment:
     PATH:                "PATH=/usr/local/bin:/usr/bin:/usr/local/sbin:/usr/sbin:/opt/mssql/bin:/opt/mssql-tools/bin:/home/vagrant/.local/bin:/home/vagrant/bin:/opt/mssql/bin:/opt/mssql-tools/bin"
   with_items:
@@ -145,35 +145,35 @@
    - "connections.sql/library.gcd/sqlserver/appGrants.sql"
    - "connections.sql/library.os/sqlserver/appGrants.sql"
   when:
-    - not migrations_already_done.stat.exists
+    - not creation_already_done.stat.exists
 
 - name:                  "Verify if Sharepoint migration has already run"
   stat:
     path:                "{{ __sql_sharepoint_success_file }}"
-  register:              sharepoint_migrations_already_done
+  register:              sharepoint_creation_already_done
 
 - name:                  Run Sharepoint migration for Connections 7
   shell:                 "{{ __sql_migration_cmd }} {{ __installation_folder }}/{{ item }} {{ __sql_migration_cmd_args }}"
-  register:              all_migrations_result
-  failed_when:           ( all_migrations_result.rc not in [0] )
+  register:              all_creation_result
+  failed_when:           ( all_creation_result.rc not in [0] )
   environment:
     PATH:                "PATH=/usr/local/bin:/usr/bin:/usr/local/sbin:/usr/sbin:/opt/mssql/bin:/opt/mssql-tools/bin:/home/vagrant/.local/bin:/home/vagrant/bin:/opt/mssql/bin:/opt/mssql-tools/bin"
   with_items:
    - "connections.sql/homepage/sqlserver/upgrade-60CR4-70.sql"
   when:
-    - not sharepoint_migrations_already_done.stat.exists
+    - not sharepoint_creation_already_done.stat.exists
     - __db_version == '7.0'
     - __db_enable_upgrades |bool
 
 - name:                  "Verify if IC360 DB is already created"
   stat:
     path:                "{{ __sql_ic360_success_file }}"
-  register:              ic360_migrations_already_done
+  register:              ic360_creation_already_done
 
-- name:                  Run migrations for IC360
+- name:                  Run database creation for IC360
   shell:                 "{{ __sql_migration_cmd }} {{ __installation_folder }}/{{ item }} {{ __sql_migration_cmd_args }}"
-  register:              all_migrations_result
-  failed_when:           ( all_migrations_result.rc not in [0] )
+  register:              all_creation_result
+  failed_when:           ( all_creation_result.rc not in [0] )
   environment:
     PATH:                "PATH=/usr/local/bin:/usr/bin:/usr/local/sbin:/usr/sbin:/opt/mssql/bin:/opt/mssql-tools/bin:/home/vagrant/.local/bin:/home/vagrant/bin:/opt/mssql/bin:/opt/mssql-tools/bin"
   with_items:
@@ -181,27 +181,27 @@
    - "connections.sql/ic360/sqlserver/appGrants.sql"
   when:
     - __db_version == '7.0'
-    - not ic360_migrations_already_done.stat.exists
+    - not ic360_creation_already_done.stat.exists
 
-- name:                  Run migrations for ICEC only
+- name:                  Run database creation for ICEC only
   shell:                 "{{ __sql_migration_cmd }} {{ __installation_folder }}/{{ item }} {{ __sql_migration_cmd_args }}"
-  register:              all_migrations_result
-  failed_when:           ( all_migrations_result.rc not in [0] )
+  register:              all_creation_result
+  failed_when:           ( all_creation_result.rc not in [0] )
   environment:
     PATH:                "PATH=/usr/local/bin:/usr/bin:/usr/local/sbin:/usr/sbin:/opt/mssql/bin:/opt/mssql-tools/bin:/home/vagrant/.local/bin:/home/vagrant/bin:/opt/mssql/bin:/opt/mssql-tools/bin"
   with_items:
    - "connections.sql/icec/sqlserver/createDb.sql"
    - "connections.sql/icec/sqlserver/appGrants.sql"
   when:
-    - not migrations_already_done.stat.exists
+    - not creation_already_done.stat.exists
 
 - name:                  "Create {{ __sql_success_file }} file"
   file:
     path:                "{{ __sql_success_file }}"
     state:               touch
   when:
-   - all_migrations_result is defined
-   - not migrations_already_done.stat.exists
+   - all_creation_result is defined
+   - not creation_already_done.stat.exists
 
 - name:                  "Create {{ __sql_ic360_success_file }} file"
   file:
@@ -209,7 +209,7 @@
     state:               touch
   when:
    - ic360_migration_result is defined
-   - not ic360_migrations_already_done.stat.exists
+   - not ic360_creation_already_done.stat.exists
 
 - name:                  "Create {{ __sql_sharepoint_success_file }} file"
   file:
@@ -217,4 +217,4 @@
     state:               touch
   when:
    - sharepoint_migration_result is defined
-   - not sharepoint_migrations_already_done.stat.exists
+   - not sharepoint_creation_already_done.stat.exists
