--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,3 +3,9 @@
 # default user to use for playbooks if user is not specified
 # # (/usr/bin/ansible will use current user as default)
 # #remote_user = root
+remote_user = ansible
+# Use the YAML callback plugin.
+stdout_callback = yaml
+stderr_callback = debug
+# Use the stdout_callback when running ad-hoc commands.
+bin_ansible_callbacks = True
