--- a/roles/hcl/component-pack/post-install-config/vars/main.yml
+++ b/roles/hcl/component-pack/post-install-config/vars/main.yml
@@ -14,10 +14,10 @@ __sudo_user:                    "{{ kubectl_user | default( ansible_env['SUDO_US
 __default_namespace:            "{{ default_namespace | default('connections') }}"
 
 __lcc_namespaces:
-    xmlns="http://www.ibm.com/LotusConnections-config"
-    xsi="http://www.w3.org/2001/XMLSchema-instance"
-    sloc="http://www.ibm.com/service-location"
-    tns="http://www.ibm.com/LotusConnections-config"
+    xmlns: "http://www.ibm.com/LotusConnections-config"
+    xsi: "http://www.w3.org/2001/XMLSchema-instance"
+    sloc: "http://www.ibm.com/service-location"
+    tns: "http://www.ibm.com/LotusConnections-config"
 __lcc_full_path:                "{{ __was_install_location }}/profiles/{{ __profile_name }}/config/cells/{{ __was_cellname }}/LotusConnections-config/LotusConnections-config.xml"
 
 # OrientMe
