--- a/site.yml
+++ b/site.yml
@@ -1,7 +1,9 @@
 ---
-#- name: Install epel
-#  import_playbook: playbooks/epel.yml
-#
+- name: Install epel
+  import_playbook: playbooks/epel.yml
+
+- name: Install Connections
+  import_playbook: playbooks/cnx.yml
     # - name: Cleanup
     #   import_playbook: playbooks/hcl/cleanup/cleanup-db2.yml
 
@@ -14,12 +16,3 @@
     # - name: Setup Connections
     # import_playbook: playbooks/hcl/setup-connections-ifix.yml
     
-- name:                    Install HTTP Servers
-  hosts:                   ihs_servers
-  become:                  true
-  roles:
-    - roles/third_party/ibm/installation-manager-install
-    - roles/third_party/ibm/ihs/ibm-http-server-install
-    - roles/third_party/ibm/ihs/ibm-http-server-fix-install
-
-
