start removing shell tasks, add db2 11.5.6

--- a/environments/rockylinux85-cnx70/group_vars/all.yml
+++ b/environments/rockylinux85-cnx70/group_vars/all.yml
@@ -72,6 +72,8 @@ enable_prometheus_jmx_exporter:                  False
 ifix_apar:                                       CFix.70.2110
 cnx_ifix_installer:                              HCL_Connections_70_updateInstaller_2104.zip
 ifix_file:                                       CFix.70.2110-IC7.0.0.0-Common-Fix.jar
+db2_package_name:                                v11.5.6_linuxx64_universal_fixpack.tar.gz
+db2_license_file:                                DB2ESE_Restricted_Activation_11.5.zip
 
 setup_docker_registry:                           False
 component_pack_package_name:                     component_pack_7.0.0.2.zip
