--- a/site.yml
+++ b/site.yml
@@ -1,18 +1,15 @@
 ---
-# - name: Install epel
-#   import_playbook: playbooks/epel.yml
+#- name: Install epel
+#  import_playbook: playbooks/epel.yml
 #
-# - name: Bootstrap servers
-#   import_playbook: playbooks/bootstrap.yml
-
     # - name: Cleanup
     #   import_playbook: playbooks/hcl/cleanup/cleanup-db2.yml
 
 - name: Install Connections and prerequisits
-  import_playbook: playbooks/setup-trial-environment.yml
+  import_playbook: playbooks/setup-connections-complete.yml
 
-    # - name: Setup Component Pack
-    #   import_playbook: playbooks/hcl/setup-component-pack.yml
-    #
+- name: Setup Component Pack
+  import_playbook: playbooks/hcl/setup-component-pack.yml
+
 - name: Setup Connections
   import_playbook: playbooks/hcl/setup-connections-ifix.yml
