--- a/playbooks/setup-trial-environment.yml
+++ b/playbooks/setup-trial-environment.yml
@@ -32,5 +32,8 @@
 - name:                  Setup Connections
   import_playbook:       hcl/setup-connections.yml
 
+- name:                  Setup Connections CFix
+  import_playbook:       hcl/setup-connections-ifix.yml
+
 - name:                  Setup Component Pack
   import_playbook:       hcl/setup-component-pack.yml
