--- a/roles/hcl/connections/clean_was_temp/tasks/main.yml
+++ b/roles/hcl/connections/clean_was_temp/tasks/main.yml
@@ -15,7 +15,7 @@
 - debug:                 var=versionStampToSet
 
 - name:                  Update versionStamp in LotusConnections-config.xml
-  xml:
+  community.general.xml:
     path:                "{{ __lcc_full_path }}"
     namespaces:          "{{ __lcc_namespaces }}"
     xpath:               "{{ __lcc_versionstamp_xpath }}"
