--- a/roles/hcl/docs/setup-environment/tasks/setup_os.yml
+++ b/roles/hcl/docs/setup-environment/tasks/setup_os.yml
@@ -4,16 +4,16 @@
     state:       present
   when:
     - ansible_os_family == "RedHat"
-    - ansible_distribution_major_version == "7"
+    - ansible_os_family_major_version == "7"
 
 - name:          Install epel-release on RHEL
   yum:
-    name:        https://dl.fedoraproject.org/pub/epel/epel-release-latest-{{ ansible_distribution_major_version }}.noarch.rpm
+    name:        https://dl.fedoraproject.org/pub/epel/epel-release-latest-{{ ansible_os_family_major_version }}.noarch.rpm
     state:       present
     disable_gpg_check:  true
   when:
     - ansible_os_family == "RedHat"
-    - ansible_distribution_major_version == "8" or ansible_distribution_major_version == "9"
+    - ansible_os_family_major_version == "8" or ansible_os_family_major_version == "9"
 
 - name:          Install pre-requisites Yum on RHEL
   yum:
@@ -21,15 +21,15 @@
     state:       present
   when:
     - ansible_os_family == "RedHat"
-    - ansible_distribution_major_version == "8" or ansible_distribution_major_version == "9"
+    - ansible_os_family_major_version == "8" or ansible_os_family_major_version == "9"
 
 - name:          Install pre-requisites Yum on AlmaLinux
   yum:
     name:        ['python3-pip']
     state:       present
   when:
-    - ansible_distribution == "AlmaLinux"
-    - ansible_distribution_major_version == "9"
+    - ansible_os_family == "AlmaLinux"
+    - ansible_os_family_major_version == "9"
 
 - name:          Install pre-requisites Yum for Conversion service
   yum:
@@ -51,4 +51,4 @@
     name:        pexpect
     state:       latest
   when:
-    - ansible_distribution == "RedHat" or ansible_distribution == "AlmaLinux"
+    - ansible_os_family == "RedHat" or ansible_os_family == "AlmaLinux"
