--- a/roles/hcl/docs/tasks/update_webserver.yml
+++ b/roles/hcl/docs/tasks/update_webserver.yml
@@ -25,7 +25,7 @@
   become:             true
   when:
     - editor_proxy_already_installed.stat.exists |bool
-    - ansible_distribution == "RedHat" or ansible_distribution == "AlmaLinux"
+    - ansible_os_family == "RedHat" or ansible_os_family == "AlmaLinux"
   register:           update_webserver_performed
 
 - name:               Search for success message in install log
