--- a/roles/hcl/connections/mt/tasks/setup_os.yml
+++ b/roles/hcl/connections/mt/tasks/setup_os.yml
@@ -1,6 +1,6 @@
 ---
 - name:                       Install pre-requisites
-  yum:
+  ansible.builtin.package:
     name:                     ['perl', 'vim-common']
     state:                    present
   when:
