--- a/playbooks/setup-connections-complete.yml
+++ b/playbooks/setup-connections-complete.yml
@@ -1,21 +1,21 @@
-- name:                  Setup Database
-  import_playbook:       third_party/setup-database.yml
-
-- name:                  Setup NFS
-  import_playbook:       third_party/setup-nfs.yml
-
-- name:                  Setup Connections Wizards
-  import_playbook:       hcl/setup-connections-wizards.yml
-
-- name:                  Setup LDAP
-  import_playbook:       third_party/setup-ldap.yml
-
-- name:                  Setup IBM SDI
-  import_playbook:       third_party/setup-tdi.yml
-
-- name:                  Setup WebSphere ND
-  import_playbook:       third_party/setup-webspherend.yml
-
+# - name:                  Setup Database
+#   import_playbook:       third_party/setup-database.yml
+#
+# - name:                  Setup NFS
+#   import_playbook:       third_party/setup-nfs.yml
+#
+# - name:                  Setup Connections Wizards
+#   import_playbook:       hcl/setup-connections-wizards.yml
+#
+# - name:                  Setup LDAP
+#   import_playbook:       third_party/setup-ldap.yml
+#
+#- name:                  Setup IBM SDI
+#  import_playbook:       third_party/setup-tdi.yml
+#
+#- name:                  Setup WebSphere ND
+#  import_playbook:       third_party/setup-webspherend.yml
+#
 - name:                  Setup HCL Connections
   import_playbook:       hcl/setup-connections-only.yml
 
