--- a/roles/hcl/component-pack/tasks/enable_es_metrics.yml
+++ b/roles/hcl/component-pack/tasks/enable_es_metrics.yml
@@ -7,7 +7,7 @@
     - ansible_distribution_major_version == "8"
 
 - name:                      Install python2 on RHEL 8
-  yum:
+  ansible.builtin.package:
     name:                    ['python2']
     state:                   present
   when:
