--- a/roles/hcl/docs/setup-environment/tasks/setup_os.yml
+++ b/roles/hcl/docs/setup-environment/tasks/setup_os.yml
@@ -1,5 +1,5 @@
 - name:          Install pre-requisites Yum
-  yum:
+  ansible.builtin.package:
     name:        ['nfs-utils', 'gtk2', 'libXtst', 'xorg-x11-fonts-Type1', 'psmisc', 'glibc.i686', 'gtk2.i686', 'libXtst.i686', 'libXft.i686', 'unzip', 'vim', 'python3-pip', 'python-passlib.noarch']
     state:       present
   when:
@@ -7,7 +7,7 @@
     - ansible_distribution_major_version == "7"
 
 - name:          Install epel-release on RHEL
-  yum:
+  ansible.builtin.package:
     name:        https://dl.fedoraproject.org/pub/epel/epel-release-latest-{{ ansible_distribution_major_version }}.noarch.rpm
     state:       present
     disable_gpg_check:  true
@@ -16,7 +16,7 @@
     - ansible_distribution_major_version == "8" or ansible_distribution_major_version == "9"
 
 - name:          Install pre-requisites Yum on RHEL
-  yum:
+  ansible.builtin.package:
     name:        ['nfs-utils', 'gtk2', 'libXtst', 'xorg-x11-fonts-Type1', 'psmisc', 'glibc.i686', 'gtk2.i686', 'libXtst.i686', 'libXft.i686', 'unzip', 'vim', 'python3-pip', 'python3-passlib.noarch']
     state:       present
   when:
@@ -24,7 +24,7 @@
     - ansible_distribution_major_version == "8" or ansible_distribution_major_version == "9"
 
 - name:          Install pre-requisites Yum on AlmaLinux
-  yum:
+  ansible.builtin.package:
     name:        ['python3-pip']
     state:       present
   when:
@@ -32,7 +32,7 @@
     - ansible_distribution_major_version == "9"
 
 - name:          Install pre-requisites Yum for Conversion service
-  yum:
+  ansible.builtin.package:
     name:        ['ImageMagick', 'libSM.i686']
     state:       present
   when:
