--- a/roles/hcl/docs/tasks/download_docs.yml
+++ b/roles/hcl/docs/tasks/download_docs.yml
@@ -77,7 +77,7 @@
     - ansible_distribution_major_version == "8"
 
 - name:                  Install python2 on RHEL 8 (for v2.0.1)
-  yum:
+  ansible.builtin.package:
     name:                ['python2']
     state:               present
   when:
