Add mongo5 role

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,3 +3,4 @@
 # default user to use for playbooks if user is not specified
 # # (/usr/bin/ansible will use current user as default)
 # #remote_user = root
+collections_paths = ./
