--- a/roles/vegard.was_user/tasks/main.yml
+++ b/roles/vegard.was_user/tasks/main.yml
@@ -11,6 +11,8 @@
     name: "{{ was_run_group }}"
     state: present
   become: true
+  when:
+    - create_was_user
 
 - name: Add non-root user to run WebSphere
   ansible.builtin.user:
@@ -20,6 +22,8 @@
     group: "{{ was_run_group }}"
     append: true
   become: true
+  when:
+    - create_was_user
 
 - name: Stop WebSphere processes (Dmgr)
   ansible.builtin.shell: |
