--- a/roles/vegard.was_stop/tasks/main.yml
+++ b/roles/vegard.was_stop/tasks/main.yml
@@ -1,25 +1,25 @@
 ---
 # tasks file for vegard.was-stop
 - name: Stop Systemd DMGR
-  ansible.builtin.systemd_service:
+  ansible.builtin.systemd:
     name: was-dmgr.service
     state: stopped
   become: true
 
 - name: Stop Systemd NodeAgents
-  ansible.builtin.systemd_service:
+  ansible.builtin.systemd:
     name: was-node.service
     state: stopped
   become: true
 
 - name: Stop IHS
-  ansible.builtin.systemd_service:
+  ansible.builtin.systemd:
     name: was-ihs.service
     state: stopped
   become: true
 
 - name: Stop IHS Admin
-  ansible.builtin.systemd_service:
+  ansible.builtin.systemd:
     name: was-ihs-admin.service
     state: stopped
   become: true
